--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/fragment_container_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.mrsneaker.ultrascheduler.CalendarFragment"
+        android:name="com.mrsneaker.ultrascheduler.ui.calendar.CalendarFragment"
         tools:layout="@layout/fragment_calendar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
