--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/background"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -21,8 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/back"
-            android:textColor="@color/blue"
-            android:background="@null"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/button_blue"
             android:textStyle="bold"
             android:textSize="20sp"/>
 
@@ -32,6 +33,7 @@
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/month_year"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:textAlignment="center" />
 
@@ -41,8 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/forward"
-            android:textColor="@color/blue"
-            android:background="@null"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/button_blue"
             android:textStyle="bold"
             android:textSize="20sp"/>
 
@@ -131,8 +133,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_event"
-        android:textColor="@color/blue"
-        android:background="@null"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/button_blue"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:textSize="20sp"/>
