--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -1,73 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    android:layout_width="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@color/background"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/background"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp">
+
+        <Button
+            android:id="@+id/previous_day_btn"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp">
+            android:layout_weight="1"
+            android:text="@string/back"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/button_blue"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
 
-            <Button
-                android:id="@+id/previous_day_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/back"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/button_blue"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
+        <TextView
+            android:id="@+id/actualDayTV"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:text="@string/actual_day"
+            android:textSize="20sp"
+            android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/actualDayTV"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:text="@string/actual_day"
-                android:textSize="20sp"
-                android:textAlignment="center" />
+        <Button
+            android:id="@+id/next_day_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/forward"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/button_blue"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
 
-            <Button
-                android:id="@+id/next_day_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/forward"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/button_blue"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
+    </LinearLayout>
 
-        </LinearLayout>
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
+        android:fillViewport="true">
 
-        <androidx.core.widget.NestedScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
-            android:fillViewport="true">
+            android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/hourRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/hourRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"/>
+            <FrameLayout
+                android:id="@+id/eventsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="5dp" />
 
-                <FrameLayout
-                    android:id="@+id/eventsContainer"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"/>
-            </RelativeLayout>
-        </androidx.core.widget.NestedScrollView>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </RelativeLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/addEventDay"
+        app:icon="@drawable/baseline_add_50"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/button_blue"
+        android:padding="15dp"
+        app:iconSize="40dp"
+        app:iconTint="@color/white"
+        app:cornerRadius="20dp"
+        android:layout_marginStart="280dp"
+        android:layout_marginTop="650dp"
+        />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
