--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="deep_gray">#2B2F31</color>
+    <color name="light_gray">#A6A6A6</color>
     <color name="blue">#303F9F</color>
     <color name="gray">#555555</color>
     <color name="background">#003D3F</color>
+    <color name="popup_background">#005659</color>
     <color name="button_blue">#457B76</color>
+    <color name="switch_thumb_tint">#243F3D</color>
     <color name="calendar_item_color">#2B4C49</color>
 </resources>
