Create a week view (calendar-like)  - #1 Event display in dayView has been improved.
Event management - #2 : Added button to modify an event, suppress it.. not functional for this commit (no back  => TODO).

--- a/app/src/main/res/layout/fragment_event_form.xml
+++ b/app/src/main/res/layout/fragment_event_form.xml
@@ -9,6 +9,7 @@
     tools:context=".ui.event.EventFormFragment">
 
     <EditText
+        android:id="@+id/eventSubject"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:importantForAutofill="no"
@@ -98,6 +99,7 @@
         android:background="@android:color/darker_gray" />
 
     <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/eventDescriptionForm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/write_a_description"
