--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragmentDayContainer"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -62,13 +63,14 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true" />
 
-            <FrameLayout
+            <LinearLayout
                 android:id="@+id/eventsContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="60dp"
-                android:layout_marginEnd="5dp" />
+                android:layout_marginEnd="5dp"
+                android:orientation="horizontal" />
 
         </RelativeLayout>
 
