--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="blue">#303F9F</color>
     <color name="gray">#555555</color>
     <color name="background">#003D3F</color>
+    <color name="transparent_black">#65000000</color>
+    <color name="transparent_back">#00000000</color>
+    <color name="default_event_tint">#005457</color>
     <color name="popup_background">#005659</color>
     <color name="button_blue">#457B76</color>
     <color name="switch_thumb_tint">#243F3D</color>
