--- a/app/src/main/res/layout/item_hour.xml
+++ b/app/src/main/res/layout/item_hour.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -7,16 +7,19 @@
     <TextView
         android:id="@+id/hourTextView"
         android:layout_width="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_height="wrap_content"
-        android:height="50dp"
+        android:height="@dimen/hour_height"
+        android:text="@string/hour_mocker"
+        android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <View
         android:layout_width="match_parent"
+        android:layout_gravity="center"
         android:layout_height="1dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="10dp"
         android:background="@android:color/darker_gray" />
 
-</RelativeLayout>
+</FrameLayout>
