--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -23,7 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:paddingTop="4dp" />
+            android:paddingTop="2dp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/eventDate"
